Create directory for images
The directory images is created. The baked-italian-sub.jpeg
is added to the images directory. Update index.html to include
src attribute baked-italian-sub.jpeg.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/baked-italian-sub.html">Baked Italian Sub</a>
+    <img src="./images/baked-italian-sub.jpeg" alt="Baked italian sub">
 </body>
 </html>
