--- a/recipes/baked-italian-sub.html
+++ b/recipes/baked-italian-sub.html
@@ -6,4 +6,32 @@
 </head>
 <body>
     <h1>Baked Italian Sub</h1>
+    <img src="../images/baked-italian-sub.jpeg" alt="Baked italian sub">
+    <h2>Description</h2>
+    <p>Start making Italian sub sandwiches at home! They're quick and easy to make. 
+        Get ready for a delicious, homemade sandwich hot out of the oven.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 (7 to 8-inch) hoagie rolls</li>
+        <li>6 thin slices deli ham</li>
+        <li>6 thin slices Genoa salami</li>
+        <li>6 thin slices capicola ham (optional)</li>
+        <li>2 slices provolone cheese, halved</li>
+        <li>1/3 cup sliced banana peppers, or to taste</li>
+        <li>tomato slices, to taste (optional)</li>
+        <li>shredded lettuce, to taste (optional)</li>
+        <li>thinly sliced red onion, to taste (optional)</li>
+        <li>drizzle of olive oil</li>
+        <li> drizzle of red win vinegar</li>
+        <li>1 pinch oregano</li>
+        <li> salt and freshly ground black pepper to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Line a baking sheet with parchment paper.</li>
+        <li>Slice rolls in half lengthwise, but do not cut all the way through. Place rolls on the prepared baking sheet, open side up.</li>
+        <li>Evenly layer rolls with ham, salami, and capicola, folding to fit. Place the halved provolone and banana peppers on the top of the meat.</li>
+        <li> Bake in the preheated oven just until cheese starts to melt, 5 to 8 minutes.</li>
+        <li>Remove sandwhiches from the oven, dress with tomatoes, lettuce, and red onion as desired. Lightly drizzle with olive oil and red wine vinegar; sprinkle with oregano and season with salt and pepper. Serve warm.</li>
+    </ol>
 </body>
