--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/baked-italian-sub.html">Baked Italian Sub</a>
-    <p></p>
-    <img src="./images/baked-italian-sub.jpeg" alt="Baked italian sub">
+    <ul>
+        <li><a href="recipes/baked-italian-sub.html">Baked Italian Sub</a></li>
+        <li><a href="recipes/chicken-gnocchi-soup.html">Chicken and Gnocchi Soup</a> </li>
+    </ul>
 </body>
 </html>
