--- a/recipes/chicken-gnocchi-soup.html
+++ b/recipes/chicken-gnocchi-soup.html
@@ -6,5 +6,38 @@
     <title>Chicken and Gnocchi Soup</title>
 </head>
 <body>
-    
+    <h1>Chicken and Gnocchi Soup</h1>
+    <img src="../images/chicken-and-gnocchi-soup.jpg" alt="chicken-and-gnocchi-soup">
+    <h2>Description</h2>
+    <p>A delicious copycat version of Olive Garden's gnocchi soup.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1/2 cup margarine</li>
+        <li>3/4 cup finely chopped onion</li>
+        <li>1/2 cup finely grated carrot</li>
+        <li>1 1/2 teaspoons minced garlic</li>
+        <li>1/3 cup all-purpose flour</li>
+        <li>4 cups chicken broth</li>
+        <li>3/4 cup half-and-half</li>
+        <li>3/4 cup milk</li>
+        <li>1 (16 ounce) package potato gnocchi</li>
+        <li>1 1/2 cups chopped cooked chicken</li>
+        <li>3/4 cup shredded fresh spinach</li>
+        <li>1/2 teaspoon dried rosemary</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon ground black pepper</li>
+        <li>1/4 teaspoon nutmeg</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Melt margarine in a large, heavy saucepan over medium heat.</li>
+        <li>Cook and stir onion, celery, carrot, and garlic in hot margarine until softened, 5 to 10 minutes.</li>
+        <li>Stir flour into vegetable mixture.</li>
+        <li>Cook and stir until vegetables are evenly coated and flour is fragrant, 3 to 4 minutes.</li>
+        <li>Pour chicken broth, half-and-half, and milk over vegetable mixture.</li>
+        <li>Cook and stir until mixture thickens and comes to a boil, about 5 minutes.</li>
+        <li>Reduce heat and stir in gnocchi, chicken, and spinach.</li>
+        <li>Season with rosemary, salt, black pepper, and nutmeg.</li>
+        <li>Cook soup over low heat until gnocchi is tender, 8 to 11 minutes.</li>
+    </ol>
 </body>
