Create third recipe
Create beef-stroganoff.html and add beef-stroganoff.jpg to images
directory. Typo change to baked-italian-sub.html.

--- a/recipes/baked-italian-sub.html
+++ b/recipes/baked-italian-sub.html
@@ -32,6 +32,6 @@
         <li>Slice rolls in half lengthwise, but do not cut all the way through. Place rolls on the prepared baking sheet, open side up.</li>
         <li>Evenly layer rolls with ham, salami, and capicola, folding to fit. Place the halved provolone and banana peppers on the top of the meat.</li>
         <li> Bake in the preheated oven just until cheese starts to melt, 5 to 8 minutes.</li>
-        <li>Remove sandwhiches from the oven, dress with tomatoes, lettuce, and red onion as desired. Lightly drizzle with olive oil and red wine vinegar; sprinkle with oregano and season with salt and pepper. Serve warm.</li>
+        <li>Remove sandwiches from the oven, dress with tomatoes, lettuce, and red onion as desired. Lightly drizzle with olive oil and red wine vinegar; sprinkle with oregano and season with salt and pepper. Serve warm.</li>
     </ol>
 </body>
