Add third recipe link in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/baked-italian-sub.html">Baked Italian Sub</a></li>
-        <li><a href="recipes/chicken-gnocchi-soup.html">Chicken and Gnocchi Soup</a> </li>
+        <li><a href="recipes/chicken-gnocchi-soup.html">Chicken and Gnocchi Soup</a></li>
+        <li><a href="recipes/beef-stroganoff.html">Beef Stroganoff</a></li>
     </ul>
 </body>
 </html>
