update beef-stroganoff.html <title>

--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <head>Beef Stroganoff</head>
+    <title>Beef Stroganoff</title>
 </head>
 <body>
     <h1>Beef Stroganoff</h1>
